# discord-bot-backend

./: .env  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  redis.rs
src/routes/: clock.rs  mod.rs
