[package]
name = "discord-bot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "0.14.27", features = ["server", "http1"] }  # ✅ Must include "server" and "http1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.24", features = ["tokio-comp"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"